--- a/La Ñata/Views/Shared/_Layout.cshtml
+++ b/La Ñata/Views/Shared/_Layout.cshtml
@@ -35,6 +35,9 @@
                     <li class="nav-item">
                         <a class="nav-link" id="ExpenseLink" href="#"><i class="bi bi-cash"></i>Gastos</a>
                     </li>
+                    <li class="nav-item" id="logout">
+                        <a class="nav-link" href="/Login/Logout"><i class="bi bi-box-arrow-left"></i>Cerrar sesión</a>
+                    </li>
                 </ul>
             </div>
         </nav>
