--- a/La Ñata/Views/Orders/Create.cshtml
+++ b/La Ñata/Views/Orders/Create.cshtml
@@ -34,42 +34,42 @@
 }
 
 <div class="container d-flex justify-content-center p-5 mt-5" id="formContainer">
-    @using (Html.BeginForm("AddProducts", "Orders", FormMethod.Post, new { @class = "mx-auto " }))
+    @using (Html.BeginForm("AddProducts", "Orders", FormMethod.Post, new { @class = "mx-2 " }))
     {
         @Html.AntiForgeryToken()
 
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div>
-            @Html.LabelFor(model => model.date, "Fecha", htmlAttributes: new { @class = "control-label" })
+            @Html.LabelFor(model => model.date, "Fecha")
             @Html.EditorFor(model => model.date, new { htmlAttributes = new { @class = "form-control", @id = "datepicker" } })
             @Html.ValidationMessageFor(model => model.date, "", new { @class = "text-danger mb-4 mt-3" })
         </div>
 
-        <div>
-            @Html.LabelFor(model => model.client_name, "Cliente", htmlAttributes: new { @class = "control-label" })
+        <div class="mt-2">
+            @Html.LabelFor(model => model.client_name, "Cliente")
             @Html.EditorFor(model => model.client_name, new { htmlAttributes = new { @class = "form-control", @placeholder = "Nombre y apellido" } })
             @Html.ValidationMessageFor(model => model.client_name, "", new { @class = "text-danger mb-4 mt-3" })
         </div>
 
-        <div>
-            @Html.LabelFor(model => model.phone, "Teléfono", htmlAttributes: new { @class = "control-label" })
+        <div class="mt-2">
+            @Html.LabelFor(model => model.phone, "Teléfono")
             @Html.EditorFor(model => model.phone, new { htmlAttributes = new { @class = "form-control", @type = "tel", @placeholder = "Fijo / Celular" } })
             @Html.ValidationMessageFor(model => model.phone, "", new { @class = "text-danger mb-4 mt-3" })
         </div>
 
-        <div>
-            @Html.LabelFor(model => model.event_adress, "Dirección", htmlAttributes: new { @class = "control-label" })
+        <div class="mt-2">
+            @Html.LabelFor(model => model.event_adress, "Dirección")
             @Html.EditorFor(model => model.event_adress, new { htmlAttributes = new { @class = "form-control", @placeholder = "Lugar del evento" } })
             @Html.ValidationMessageFor(model => model.event_adress, "", new { @class = "text-danger mb-4 mt-3" })
         </div>
 
-        <div>
-            @Html.LabelFor(model => model.shipment_price, "Precio flete", htmlAttributes: new { @class = "control-label" })
+        <div class="mt-2">
+            @Html.LabelFor(model => model.shipment_price, "Precio flete")
             @Html.EditorFor(model => model.shipment_price, new { htmlAttributes = new { @class = "form-control", @type = "number", @min = "0", @step = "0.01", @placeholder = "$" } })
             @Html.ValidationMessageFor(model => model.shipment_price, "", new { @class = "text-danger mb-4 mt-3" })
         </div>
 
-        <div class="d-flex mt-3">
+        <div class="d-flex mt-4">
             <input type="submit" value="Aceptar" class="btn btn-success flex-grow-1" />
         </div>
     }
