--- a/La Ñata/Views/Orders/Index.cshtml
+++ b/La Ñata/Views/Orders/Index.cshtml
@@ -31,6 +31,8 @@
 
 <div class="mb-5 d-flex flex-row">
     <div class="col-xl-9 col-11 mx-auto">
+
+        @* Input fecha *@
         <div class="sombra p-4 mb-5" style="border-radius: 20px">
             <div id="searchContainer" class="d-flex justify-content-between">
                 <div class="d-flex flex-row">
