--- a/La Ñata/Views/Products/Edit.cshtml
+++ b/La Ñata/Views/Products/Edit.cshtml
@@ -60,11 +60,11 @@
         </div>
 
         <div class="d-flex mt-3">
-            <input type="submit" value="Guardar" class="btn btn-success flex-grow-1" />
+            <input type="submit" value="Guardar" class="btn flex-grow-1" style="background-color: yellowgreen; color: white" />
         </div>
 
         <div class="d-flex mt-5">
-            <input type="button" id="btnDelete" value="Eliminar" class="btn btn-danger flex-grow-1" />
+            <input type="button" id="btnDelete" value="Eliminar" class="btn flex-grow-1" style="background-color: crimson; color: white" />
         </div>
     }
 </div>
