--- a/La Ñata/Views/Home/Index.cshtml
+++ b/La Ñata/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
 <h1 class="text-center">INICIO</h1>
 <hr class="pb-3" />
 
-<div class="container-fluid d-flex flex-row row justify-content-center">
+<div class="container d-flex flex-row row justify-content-center mx-auto">
     <a href="../../Orders/Create" class="data-card">
         <h3>Crear</h3>
         <h4>Nuevo pedido</h4>
