--- a/La Ñata/Views/Orders/AddProducts.cshtml
+++ b/La Ñata/Views/Orders/AddProducts.cshtml
@@ -42,9 +42,8 @@
                     @Html.ValidationMessageFor(model => model.quantity, null, new { @class = "text-center text-danger mb-4" })
                 </div>
             </div>
-            <div class="modal-footer">
-                <button id="btnSendForm" type="submit" class="btn btn-primary">Agregar</button>
-                <button id="modalCerrar" type="button" class="btn btn-danger" data-bs-dismiss="modal">Cerrar</button>
+            <div class="modal-footer d-flex justify-content-start ps-3">
+                <button id="btnSendForm" type="submit" class="btn" style="background-color: yellowgreen">Agregar</button>
             </div>
         </div>
     </div>
@@ -147,9 +146,9 @@
                 <table>
                     <thead>
                         <tr class="row100 head d-flex">
-                            <th class="cell100 py-3 text-center" style="background-color: lightgreen; width: 40%; text-shadow: 0px 0px 30px #000; background-image: none">Producto</th>
-                            <th class="cell100 py-3 text-center" style="background-color: lightgreen; width: 30%; text-shadow: 0px 0px 30px #000; background-image: none">Cantidad</th>
-                            <th class="cell100 py-3 text-center" style="background-color: lightgreen; width: 30%; text-shadow: 0px 0px 30px #000; background-image: none">Eliminar</th>
+                            <th class="cell100 py-3 text-center" style="width: 40%; background-color: lightgreen; background-image: linear-gradient(to bottom, transparent, #5c5c5c66); color: rgb(80, 80, 80)">Producto</th>
+                            <th class="cell100 py-3 text-center" style="width: 30%; background-color: lightgreen; background-image: linear-gradient(to bottom, transparent, #5c5c5c66); color: rgb(80, 80, 80) ">Cantidad</th>
+                            <th class="cell100 py-3 text-center" style="width: 30%; background-color: lightgreen; background-image: linear-gradient(to bottom, transparent, #5c5c5c66); color: rgb(80, 80, 80) ">Eliminar</th>
                         </tr>
                     </thead>
                 </table>
