--- a/La Ñata/Views/Orders/Create.cshtml
+++ b/La Ñata/Views/Orders/Create.cshtml
@@ -70,7 +70,7 @@
         </div>
 
         <div class="d-flex mt-4">
-            <input type="submit" value="Aceptar" class="btn btn-success flex-grow-1" />
+            <input type="submit" value="Aceptar" class="btn flex-grow-1" style="color: white; background-color: yellowgreen" />
         </div>
     }
 </div>
