--- a/La Ñata/Views/Orders/Details.cshtml
+++ b/La Ñata/Views/Orders/Details.cshtml
@@ -8,6 +8,31 @@
 <link href="~/Content/notification.css" rel="stylesheet" />
 <link href="~/Content/table.css" rel="stylesheet" />
 
+@using (Html.BeginForm("Delete", "Orders", FormMethod.Post, new { @id = "formDeleteOrder" }))
+{
+    @Html.AntiForgeryToken();
+    @Html.HiddenFor(model => model.id)
+    <!-- Modal -->
+    <div class="modal fade" id="modalConfirmation" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="modalConfirmationLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="modalConfirmationLabel">Eliminar orden</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+                </div>
+                <div class="modal-body">
+                    ¿Seguro deseas eliminar esta orden?
+                </div>
+                <div class="modal-footer d-flex justify-content-between justify-content-lg-end px-3">
+                    <button type="submit" id="btnSendForm" class="btn me-lg-4" style="background-color: yellowgreen">Confirmar</button>
+                    <button type="button" class="btn" style="background-color: crimson; color: white" data-bs-dismiss="modal">Cancelar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+}
+
+
 <div class="d-flex align-items-end">
     <a class="btn btn-dark" href="../../Orders"><i class="bi bi-arrow-left"></i></a>
     <div class="d-flex flex-grow-1 justify-content-center" style="margin-right: 70px">
@@ -101,16 +126,16 @@
             <div class="sombra p-4 mb-5" style="border-radius: 20px; max-width: fit-content">
                 <div class="d-flex flex-row" style="max-width: fit-content">
                     <div class="sombra d-flex flex-row me-2 me-sm-5">
-                        <a id="btnSearch" href="../../Orders/Edit/@Model.id" class="btn" style="background-color: yellowgreen; color: white">
+                        <a id="btnSearch" href="../../Orders/Edit/@Model.id" class="btn" style="background-color: yellowgreen; color: black">
                             Editar
-                            <i class="bi bi-pencil" style="color: white"></i>
+                            <i class="bi bi-pencil" style="color: black"></i>
                         </a>
                     </div>
                     <div class="sombra d-flex flex-row ms-2 ms-sm-5">
-                        <a id="btnSearch" href="#" class="btn" style="background-color: crimson; color: white">
+                        <button id="btnSearch" href="#" class="btn" style="background-color: crimson; color: white" data-bs-toggle="modal" data-bs-target="#modalConfirmation">
                             Eliminar
                             <i class="bi bi-x-lg" style="color: white"></i>
-                        </a>
+                        </button>
                     </div>
                 </div>
             </div>
@@ -122,11 +147,11 @@
                 <table>
                     <thead>
                         <tr class="row100 head">
-                            <th class="text-center py-1 py-lg-3 column20">Producto</th>
-                            <th class="text-center py-1 py-lg-3 column10">Cantidad</th>
-                            <th class="text-center py-1 py-lg-3 column10">Precio</th>
-                            <th class="text-center py-1 py-lg-3 column10">Precio por rotura</th>
-                            <th class="text-center py-1 py-lg-3 column10">Precio actual</th>
+                            <th class="text-center py-1 py-lg-3 column20" style="background-color: lightgreen; background-image: linear-gradient(to bottom, transparent, #5c5c5c66); color: rgb(80, 80, 80)">Producto</th>
+                            <th class="text-center py-1 py-lg-3 column10" style="background-color: lightgreen; background-image: linear-gradient(to bottom, transparent, #5c5c5c66); color: rgb(80, 80, 80)">Cantidad</th>
+                            <th class="text-center py-1 py-lg-3 column10" style="background-color: lightgreen; background-image: linear-gradient(to bottom, transparent, #5c5c5c66); color: rgb(80, 80, 80)">Precio</th>
+                            <th class="text-center py-1 py-lg-3 column10" style="background-color: lightgreen; background-image: linear-gradient(to bottom, transparent, #5c5c5c66); color: rgb(80, 80, 80)">Precio por rotura</th>
+                            <th class="text-center py-1 py-lg-3 column10" style="background-color: lightgreen; background-image: linear-gradient(to bottom, transparent, #5c5c5c66); color: rgb(80, 80, 80)">Precio actual</th>
                         </tr>
                     </thead>
                 </table>
