--- a/La Ñata/Views/Orders/Edit.cshtml
+++ b/La Ñata/Views/Orders/Edit.cshtml
@@ -24,39 +24,44 @@
     }
 }
 
-@Html.Hidden("id_product")
-@Html.Hidden("new_price")
-@Html.Hidden("id_order", Model.id)
-@Html.Hidden("stock")
 @Html.Hidden("datepicker", Model.date.ToString("yyyy-MM-dd"))
-<!-- Modal -->
-<div class="modal modal-lg" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h1 class="modal-title fs-5">Agregar al pedido</h1>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
-            </div>
-            <div class="modal-body d-flex flex-column">
-                <div class="d-flex flex-column">
-                    <label class="pb-3 text-center" id="currentStock"></label>
-                    <div class="d-flex flex-row justify-content-center align-items-center">
-                        <div class='d-flex flex-row justify-content-center'>
-                            <div class='value-button' id='decrease_stock' onclick='decreaseValue()' value='Decrease Value'>-</div>
-                            @Html.TextBox("quantity", "", new { @type = "number", @id = "quantity", @class = "number" })
-                            <div class='value-button' id='increase_stock' onclick='increaseValue()' value='Increase Value'>+</div>
+
+@using (Html.BeginForm("AddToExistingOrder", "Orders", FormMethod.Post, new { @id = "formEditOrder" }))
+{ 
+    @Html.AntiForgeryToken();
+    @Html.Hidden("id_product")
+    @Html.Hidden("old_price", null)
+    @Html.Hidden("id_order", Model.id)
+    @Html.Hidden("real_stock")
+
+    <!-- Modal -->
+    <div class="modal modal-lg" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5">Agregar al pedido</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+                </div>
+                <div class="modal-body d-flex flex-column">
+                    <div class="d-flex flex-column">
+                        <label class="pb-3 text-center" id="currentStock"></label>
+                        <div class="d-flex flex-row justify-content-center align-items-center">
+                            <div class='d-flex flex-row justify-content-center'>
+                                <div class='value-button' id='decrease_stock' onclick='decreaseValue()' value='Decrease Value'>-</div>
+                                @Html.TextBox("quantity", "", new { @type = "number", @id = "quantity", @class = "number" })
+                                <div class='value-button' id='increase_stock' onclick='increaseValue()' value='Increase Value'>+</div>
+                            </div>
                         </div>
                     </div>
-                    @*@Html.ValidationMessageFor(model => model.quantity, null, new { @class = "text-center text-danger mb-4" })*@
                 </div>
-            </div>
-            <div class="modal-footer">
-                <button id="btnSendForm" type="submit" class="btn btn-primary">Agregar</button>
-                <button id="modalCerrar" type="button" class="btn btn-danger" data-bs-dismiss="modal">Cerrar</button>
+                <div class="modal-footer d-flex justify-content-between justify-content-lg-end px-3">
+                    <button id="btnSendFormAdd" type="submit" class="btn me-lg-4" style="background-color: yellowgreen">Agregar</button>
+                    <button id="btnSendFormSubstract" type="submit" class="btn" style="background-color: crimson; color: white">Quitar</button>
+                </div>
             </div>
         </div>
     </div>
-</div>
+}
 
 
 <div class="d-flex align-items-end">
@@ -90,7 +95,7 @@
                     <tbody>
                         @foreach (La_Ñata.Models.ProductOrder item in Model.ProductOrder)
                         {
-                            <tr class='row100 body clickable-row' onclick="openModal(@item.id_product, @item.Product.stock)">
+                            <tr class='row100 body clickable-row' onclick="openModalOldPrice(@item.id_product, @item.Product.stock, @item.unit_price)" data-bs-toggle='modal' data-bs-target='#exampleModal'>
                                 <td class='column20 ps-xs-3 ps-2'>@item.Product.description</td>
                                 <td class='column10 text-center'>@item.quantity</td>
                                 <td class='column10 text-center'>$@item.unit_price</td>
