--- a/La Ñata/Views/Products/Create.cshtml
+++ b/La Ñata/Views/Products/Create.cshtml
@@ -36,7 +36,7 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="mb-2">
             @Html.LabelFor(model => model.description, "Descripción", htmlAttributes: new { @class = "control-label" })
-            @Html.EditorFor(model => model.description, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.EditorFor(model => model.description, new { htmlAttributes = new { @class = "form-control", @placeholder = "Nombre del producto" } })
             @Html.ValidationMessageFor(model => model.description, "", new { @class = "text-danger mb-4 mt-3" })
         </div>
 
@@ -58,8 +58,8 @@
             @Html.ValidationMessageFor(model => model.break_price, "", new { @class = "text-danger mb-4 mt-3" })
         </div>
 
-        <div class="d-flex mt-3">
-            <input type="submit" value="Aceptar" class="btn btn-success flex-grow-1" />
+        <div class="d-flex mt-4">
+            <input type="submit" value="Aceptar" class="btn flex-grow-1" style="color: white; background-color: yellowgreen" />
         </div>
     }
 </div>
