--- a/La Ñata/Views/Orders/Details.cshtml
+++ b/La Ñata/Views/Orders/Details.cshtml
@@ -109,13 +109,13 @@
             <div class="sombra p-4 mb-lg-5 mb-2" style="border-radius: 20px; max-width: fit-content">
                 <div class="d-flex flex-row" style="max-width: fit-content">
                     <div class="sombra d-flex flex-row me-2 me-sm-5">
-                        <a id="btnSearch" href="#" class="btn" style="background-color: #e06c6c; color: white">
+                        <a href="#" class="btn" style="background-color: #e06c6c; color: white">
                             Detalle sin precio
                             <i class="bi bi-printer" style="color: white"></i>
                         </a>
                     </div>
                     <div class="sombra d-flex flex-row me-2 me-sm-5">
-                        <a id="btnSearch" href="#" class="btn" style="background-color: #e06c6c; color: white">
+                        <a href="#" class="btn" style="background-color: #e06c6c; color: white">
                             Detalle con precio
                             <i class="bi bi-printer" style="color: white"></i>
                         </a>
@@ -126,13 +126,13 @@
             <div class="sombra p-4 mb-5" style="border-radius: 20px; max-width: fit-content">
                 <div class="d-flex flex-row" style="max-width: fit-content">
                     <div class="sombra d-flex flex-row me-2 me-sm-5">
-                        <a id="btnSearch" href="../../Orders/Edit/@Model.id" class="btn" style="background-color: yellowgreen; color: black">
+                        <a href="../../Orders/Edit/@Model.id" class="btn" style="background-color: yellowgreen; color: black">
                             Editar
                             <i class="bi bi-pencil" style="color: black"></i>
                         </a>
                     </div>
                     <div class="sombra d-flex flex-row ms-2 ms-sm-5">
-                        <button id="btnSearch" href="#" class="btn" style="background-color: crimson; color: white" data-bs-toggle="modal" data-bs-target="#modalConfirmation">
+                        <button class="btn" style="background-color: crimson; color: white" data-bs-toggle="modal" data-bs-target="#modalConfirmation">
                             Eliminar
                             <i class="bi bi-x-lg" style="color: white"></i>
                         </button>
