--- a/La Ñata/Views/Shared/_Layout.cshtml
+++ b/La Ñata/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
                         <a class="nav-link" id="OrdersLink" href="/Orders"><i class="bi bi-card-list"></i>Pedidos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="ExpenseLink" href="#"><i class="bi bi-cash"></i>Gastos</a>
+                        <a class="nav-link" id="ExpensesLink" href="/Expenses"><i class="bi bi-cash"></i>Gastos</a>
                     </li>
                     <li class="nav-item" id="logout">
                         <a class="nav-link" href="/Login/Logout"><i class="bi bi-box-arrow-left"></i>Cerrar sesión</a>
